bugs fixed/spacing

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -66,7 +66,7 @@
 }
 .move{
    background-color: var(--primary-dark);
-   margin-top:90px;
+   margin-top:60px;
    display: block;
    border-radius: 40px;
    box-shadow: 0px 0px 63px 35px rgba(32, 34, 39, 0.384);
@@ -103,6 +103,7 @@
  .tools{
     font-size: 42px;
     font-weight: 800;
+    text-align: center;
     font-family: "Fredericka the Great", serif;
     letter-spacing: 3px;
     color:white;
@@ -116,6 +117,9 @@
     font-weight: 100;
     color: var(--primary-dark);
     border-radius: 20px;
+    margin-right: 40px;
+    margin-left: 40px;
+
     div {
         overflow: hidden;
         position: relative;
